build: 尝试支持Java-11